try to fix overflow issue

--- a/src/components/subMenu/style.module.css
+++ b/src/components/subMenu/style.module.css
@@ -1,6 +1,6 @@
 .stickyContainer{
   position: absolute;
-  width: 100%;
+  width: 100vw;
   bottom: 0;
   display: none;
 }
